Fixed side bar hiding on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,3 +16,7 @@ a {
 * {
 	box-sizing: border-box;
 }
+
+svg {
+    pointer-events: none;
+}
